# mood-board-search

./: .editorconfig  LICENSE  README.md  package-lock.json  package.json  script.txt
.github/workflows/: test-cavlib.yml
backend/: .flake8  .gitignore  manage.py  requirements.in  requirements.txt
backend/cavstudio_backend/: activations_cache.py  apps.py  auth.py  cav.py  image_reference.py  image_set.py  ml_engine.py  ml_image.py  settings.py  urls.py  utils.py  views.py  wsgi.py
backend/cavstudio_db/: apps.py  models.py  serializers.py  urls.py  views.py
backend/cavstudio_db/migrations/: 0001_initial.py
cavlib/: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
cavlib/docs/: Makefile  conf.py  guide.md  home.md  index.md  make.bat  reference.md
cavlib/examples/: examples.ipynb  roundness.cav
cavlib/src/cavlib/: __init__.py  activations.py  cav.py  models.py  train.py  typing.py  utils.py
cavlib/src/cavlib/resources/: download_models.py
cavlib/tests/: test_activations.py  test_cav.py  test_models.py  test_train.py  utils.py
cavlib/tests/test_data/: README.md  cavstudio_sample.cav
frontend/: .firebaserc  babel.config.js  package-lock.json  package.json  vue.config.js
frontend/public/: 404.html  index-template.html
frontend/src/: App.vue  main.ts  shims-tsx.d.ts  shims-vue.d.ts  styles.scss  util.ts
frontend/src/components/: ChooseImageDialog.vue  ExpandImageDialog.vue  ImageDragHandler.ts  InspectSpinner.vue  ModelControl.vue  PageFooter.vue  PageHeader.vue  ProjectCard.vue  PublishHeroGrid.vue  RadioButtonGraphic.vue  ResultImage.vue  ResultImageCrop.vue  ResultImageInspect.vue  Results.vue  ResultsControlBar.vue  SearchSetChooser.vue  SignInWithGoogleButton.vue  TrainingImage.vue  TrainingImageGrid.vue
frontend/src/model/: CAVImage.ts  NeuralLens.ts  Project.ts  ProjectSnapshot.ts  PublishInfo.ts  ScoutImageDataset.ts  SearchSet.ts  TrainingImageSet.ts  cavServer.ts  imageInspectCache.ts  imageUtils.ts  mock.ts  notificationCenter.ts  projectStorage.ts  published.json
frontend/src/router/: index.ts
frontend/src/views/: NewSearchSet.vue  Project.vue  ProjectsList.vue  (+2 more)
(+4 files in other folders)
