[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
files = [
    "src/**/*.py",
]
plugins = ["numpy.typing.mypy_plugin"]

warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
no_implicit_reexport = true

[tool.pyright]
reportMissingImports = false
pythonVersion = "3.7"

[tool.black]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.check-manifest]
ignore = [
    ".editorconfig",
]
