[metadata]
name = cavlib
version = 0.1.0
# description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
# url = TODO
author = Joe Rickerby
author_email = joerick@mac.com
license = Apache-2.0
license_file = LICENSE
platforms =
    Any
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
    Topic :: Scientific/Engineering :: Image Recognition
keywords =
    concept activation vector
    machine learning
    TCAV
# project_urls =
#     Documentation = TODO
#     Bug Tracker = TODO
#     Discussions = TODO
#     Changelog = TODO

[options]
packages = find:
install_requires =
    scikit-learn
    scikit-image
    Pillow
    numpy
    tflite_runtime
    msgpack
    typing_extensions
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.extras_require]
dev =
    pytest
    mypy
    Sphinx
    myst-parser
    furo
    sphinxcontrib-programoutput

[options.packages.find]
where = src

[options.package_data]
